# DT-invariants

./: HOWTO.ipynb  LICENSE.txt  README.md  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py
app/dt_invariants/: README.md  __init__.py
app/dt_invariants/src/: __init__.py  version.py
app/dt_invariants/src/categories/: __init__.py  abelian_category.py  quiver.py  slicing.py
app/dt_invariants/src/examples/: quiver.py
app/dt_invariants/src/linear_algebra/: __init__.py  central_charge.py  cone.py  dimension_vector.py  immutable.py  pairing.py  phase.py  scalar_product.py  standard_cone.py  subcone.py
app/dt_invariants/src/motives/: __init__.py  dt_invariant.py  dt_invariants.py  exp.py  gl.py  graded_motive.py  log.py  motive_of_semistables.py  motivic_series.py  sliced_motive.py  symbols.py  types.py
app/dt_invariants/src/motivic_series/: __init__.py  exp.py  log.py  motivic_series.py  series_from_fun.py
app/dt_invariants/src/stability/: __init__.py  stability_condition.py
app/dt_invariants/tests/examples/: test_quiver.py
app/dt_invariants/tests/linear_algebra/: test_pairing.py
docs/: abelian_category.rst  categories.rst  cone.rst  conf.py  dimension_vector.rst  examples.rst  index.rst  linear_algebra.rst  motives.rst  phase.rst  slicing.rst  stability.rst  standard_cone.rst  subcone.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
