# setup.cfg
[metadata]
name = dt-invariants
version = attr: app.dt_invariants.src.version.__version__
author = Sven Meinhardt
author_email = sven@meinhardt.ai
maintainer = Sven Meinhardt
maintainer_email = sven@meinhardt.ai
keywords = mathematics, motives, quiver, dt-invariants

# add a description of your package
description = A set of tools to compute DT invariants of quivers.
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/s-meinhardt/dt-invariants
download_url = https://github.com/s-meinhardt/dt-invariants/archive/refs/tags/v1.0.0.tar.gz

# define your license and license file
license = GNU GPLv3
license_files = LICENSE.txt

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers      
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir = app
install_requires =
    # list the dependencies required by your package
    sympy >= 1.11.1
    Sphinx >= 6.1.3
 

extra_require = 

python_requires = >=3.9